# hs-monte-carlo

./: .gitignore  LICENSE  NEWS  Setup.lhs  monte-carlo.cabal
Control/Monad/MC/: GSL.hs
examples/: Binomial.hs  Pi.hs  Pi.lhs  Poker.hs  Queue.hs  Sampling.hs  Shuffling.hs
lib/Control/Monad/: MC.hs
lib/Control/Monad/MC/: Base.hs  Class.hs  GSL.hs  GSLBase.hs  Repeat.hs  Sample.hs  Summary.hs  Walker.hs
lib/Data/: Summary.hs
lib/Data/Summary/: Bool.hs  Common.hs  Double.hs  Utils.hs
tests/: Main.hs  Makefile
