name:           monte-carlo
version:        0.5
license:        BSD3
license-file:   LICENSE
author:         Patrick Perry
maintainer:     Patrick Perry <patperry@gmail.com>
homepage:       http://github.com/patperry/hs-monte-carlo
category:       Math
synopsis:       A monad and transformer for Monte Carlo calculations.
description:    A monad and transformer for Monte Carlo calculations.  The
                monads carry and provide access to a random number generator.
                Importantly, they only keep one copy of the generator state,
                and so are much more efficient than MonadRandom.  Currently,
                only the generator that comes with the GNU Scientific Library
                (GSL) is supported.
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8
extra-source-files: NEWS examples/Binomial.hs examples/Pi.lhs
                    examples/Poker.hs  examples/Queue.hs tests/Main.hs
                    tests/Makefile

library
    exposed-modules:
            Control.Monad.MC
            Control.Monad.MC.Class
            Control.Monad.MC.GSL
            Data.Summary
            Data.Summary.Bool
            Data.Summary.Double
            Data.Summary.Utils

    other-modules:
            Control.Monad.MC.Base
            Control.Monad.MC.GSLBase
            Control.Monad.MC.Repeat
            Control.Monad.MC.Sample
            Control.Monad.MC.Walker

    extensions:
            FlexibleInstances,
            MultiParamTypeClasses,
            TypeFamilies,
            UndecidableInstances

    build-depends:  base       >= 4     && < 5,
                    gsl-random >= 0.4.3 && < 0.5,
                    mtl        >= 1.1   && < 3.0,
                    vector     >= 0.6   && < 0.11,
                    deepseq    >= 1.0   && < 2.0

    hs-source-dirs: lib
    ghc-options:    -Wall

source-repository head
    type:       git
    location:   https://github.com/patperry/hs-monte-carlo.git

test-suite monte-carlo-test
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      lib, tests
  main-is:
      Main.hs
  ghc-options:
      -Wall -Werror
  build-depends:
      base       >= 4     && < 5
    , gsl-random >= 0.4.3 && < 0.5
    , mtl        >= 1.1   && < 3.0
    , vector     >= 0.6   && < 0.11
    , ieee754 >= 0.7 && < 0.8
    , random >=1.0 && < 1.1
    , QuickCheck >= 2.4.0.1 && < 2.6
    , test-framework-quickcheck2 >= 0.2 && < 0.4
    , test-framework >= 0.4 && < 0.9
    , deepseq >= 1.0 && < 2.0
