name:           monte-carlo
version:        0.6.1
license:        BSD3
license-file:   LICENSE
author:         Patrick Perry
maintainer:     Patrick Perry <patperry@gmail.com>
homepage:       http://github.com/patperry/hs-monte-carlo
category:       Math
synopsis:       A monad and transformer for Monte Carlo calculations.
description:    A monad and transformer for performing Monte Carlo
                calculations. This monad carries and provides access to
                a pseudo-random number generator. Internally, the monad
                mutates rather than copies the random gnerator state.  By
                avoiding copies, it can deliver faster performance than
                many pure random number implementations.  The package is
                built around the facilities provided by the GNU Scientific
                Library (GSL).
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8
extra-source-files: NEWS examples/Binomial.hs examples/Pi.lhs
                    examples/Poker.hs examples/Queue.hs tests/Main.hs
                    tests/Makefile

library
    exposed-modules:
            Control.Monad.MC
            Data.Summary.Bool
            Data.Summary.Double

    other-modules:
            Control.Monad.MC.GSL
            Control.Monad.MC.GSLBase
            Control.Monad.MC.Repeat
            Control.Monad.MC.Sample
            Control.Monad.MC.Walker
            Data.Summary.Utils

    extensions:
            DeriveDataTypeable
            RankNTypes
            TypeFamilies

    build-depends:  base         >= 4     && < 5,
                    gsl-random   >= 0.5   && < 0.6,
                    primitive    >= 0.5   && < 0.6,
                    transformers >= 0.3   && < 0.5,
                    vector       >= 0.6   && < 0.11

    hs-source-dirs: lib
    ghc-options:    -Wall

source-repository head
    type:       git
    location:   https://github.com/patperry/hs-monte-carlo.git

test-suite monte-carlo-test
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      lib, tests
  main-is:
      Main.hs
  ghc-options:
      -Wall -Werror
  build-depends:
      base                       >= 4       && < 5,
      gsl-random                 >= 0.5     && < 0.6,
      primitive                  >= 0.5     && < 0.6,
      transformers               >= 0.3     && < 0.5,
      vector                     >= 0.6     && < 0.11,
      ieee754                    >= 0.7     && < 0.8,
      random                     >= 1.0     && < 1.1,
      QuickCheck                 >= 2.4.0.1 && < 2.8,
      test-framework             >= 0.4     && < 0.9,
      test-framework-quickcheck2 >= 0.2     && < 0.4

